backoffice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice
  template:
    metadata:
      labels:
        app: backoffice
    spec:
      containers:
      - name: backoffice
        image: haythemloueti/backoffice:1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
