debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: microservices
spec:
  containers:
  - name: debug
    image: busybox
    command:
    - sleep
    - "3600"
    resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
