frontoffice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontoffice
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontoffice
  template:
    metadata:
      labels:
        app: frontoffice
    spec:
      containers:
      - name: frontoffice
        image: haythemloueti/frontend_node:1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
