db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: database
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: db
