ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: frontoffice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontoffice-service
            port:
              number: 80
  - host: backoffice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backoffice-service
            port:
              number: 80
